Changes for Venice, 0.6 beta 23/Oct/2005
========================================

* Added basic intra-day quote support.

* Updates to Gondola Language:
  - Performance improvements due to stronger internal typing
    (Alberto Nacher).
  - Added sin() (Alberto Nacher).
  - Added cos() (Alberto Nacher).
  - Added log() (Alberto Nacher).
  - Added exp() (Alberto Nacher).

* Updates to Paper Trade:
  - The current capital, number of transactions and start of paper trade
    now available to paper trade (Alberto Nacher).

* Internationalisation:
  - Polish translation added (Benedict P. Barszcz).

* Tuning:
  - Portfolio and Watch Screens now only load the quotes they use,
    previously they'd load the entire day's quotes.

* Bug Fixes;
  - Can now import more than 200 days of quote data from Yahoo in one
    transaction (Dennis van den Berg).
  - Fixed a bug where the quote sub-system, when expanding the date
    range of a bundle of quotes, would attempt to re-load some quotes
    that were already loaded.
  - Venice no longer runs out of memory when importing very large
    quote files (>10MB).
  - Fixed a user interface bug where adding new equations to a
    table resulted in any present equation columns being removed and
    then re-added.
  - Fixed an introduced bug in 0.5 where you needed to reload Venice
    after importing new quotes.
  - Fixed a bug where the portfolio's percent change could be widly
    inaccurate.
  - Fixed a bug where sometimes an exception was thrown when removing
    a module frame.

* Library updates:
  - HSQLDB V1.8.0.2 from 1.7.3.3.
  - MySQL Connector/J V3.1.11 from 3.1.7.

Changes for Venice, 0.51 alpha 13/Apr/2005
==========================================

* Bug Fixes;
  - Fixed a major bug where if the locale was not set in the
    preferences, the application crashed at startup with a
    NullPointerException.

Changes for Venice, 0.5 alpha 13/Mar/2005
==========================================
